
Improvements
---------------------

* LUCENE-10416: Update Korean Dictionary to mecab-ko-dic-2.1.1-20180720 for Nori.
  (Uihyun Kim)

* LUCENE-10216: Use MergePolicy to define and MergeScheduler to trigger the reader merges
  required by addIndexes(CodecReader[]) API. (Vigya Sharma, Michael McCandless)

* LUCENE-10614: Properly support getTopChildren in RangeFacetCounts. (Yuting Gan)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

Other
---------------------
* LUCENE-10283: The minimum required Java version was bumped from 11 to 17.
  (Adrien Grand, Uwe Schindler, Dawid Weiss, Robert Muir)

* LUCENE-10253: The @BadApple annotation has been removed from the test
  framework. (Adrien Grand)

* LUCENE-10393: Unify binary dictionary and dictionary writer in Kuromoji and Nori.
  (Tomoko Uchida, Robert Muir)

* LUCENE-10475: Merge dictionary builders in `util` package into `dict` package in Kuromoji and Nori.
  All classes in `org.apache.lucene.analysis.[ja|ko].util` was moved to `org.apache.lucene.analysis.[ja|ko].dict`.
  (Tomoko Uchida)

* LUCENE-10493: Factor out Viterbi algorithm in Kuromoji and Nori to analysis-common. (Tomoko Uchida)

* GITHUB#977, LUCENE-9500: Remove the deflater hack introduced because of JDK-8252739 (Uwe Schindler)

======================== Lucene 9.5.0 =======================

Other
---------------------
* LUCENE-10423: Remove usages of System.currentTimeMillis() from tests. (Marios Trivyzas)


======================== Lucene 9.4.0 =======================

API Changes
---------------------
* LUCENE-10577: Add VectorEncoding to enable byte-encoded HNSW vectors (Michael Sokolov, Julie Tibshirani)

New Features
---------------------
* LUCENE-10654: Add new ShapeDocValuesField for LatLonShape and XYShape. (Nick Knize)
